<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2013 Judson D Neer -->

<resources>

    <string name="app_name">Scoresheet</string>

    <string name="start_new_game">Start New Game</string>

    <string name="title_activity_players">Enter Player Names</string>
    <string name="title_activity_bid">Enter Bid (Hand %1$d)</string>
    <string name="title_activity_meld">Enter Meld (Hand %1$d)</string>
    <string name="title_activity_points">Enter Points (Hand %1$d)</string>
    <string name="title_activity_finished">Game Finished (Hand %1$d)</string>

    <string name="main">Main</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="skip">Skip</string>
    <string name="new_">New</string>  <!-- Underscore required because "new" is a reserved name. -->
    <string name="bid">Bid</string>
    <string name="up">Up</string>
    <string name="down">Down</string>

    <string name="player0_name">Malcolm</string>
    <string name="player1_name">Zoe</string>
    <string name="player2_name">Jayne</string>
    <string name="player3_name">Kaylee</string>

    <string name="spades">Spades</string>
    <string name="diamonds">Diamonds</string>
    <string name="clubs">Clubs</string>
    <string name="hearts">Hearts</string>
    
</resources>