<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/game_margin"
        android:layout_toLeftOf="@+id/status_fragment" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/game_margin"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bid_up_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/up" />

            <TextView
                android:id="@+id/bid_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/spinner_font_size" />

            <Button
                android:id="@+id/bid_down_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/down" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/trump_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/game_margin"
            android:layout_weight="1" >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/spades" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/diamonds" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clubs" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hearts" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/bidder_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/game_margin"
            android:layout_weight="1" >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <fragment
        android:id="@id/status_fragment"
        android:name="com.singledsoftware.scoresheet.StatusFragment"
        android:layout_width="@dimen/status_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/status_margin"
        tools:layout="@layout/fragment_status" />

</RelativeLayout>